Banco de dados no VeraciApp

--- a/VeraciApp/Components/Account/Shared/ManageNavMenu.razor
+++ b/VeraciApp/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using VeraciApp.Data
+@using VeraciBot.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 
