--- a/VeraciApp/Components/Layout/MainLayout.razor
+++ b/VeraciApp/Components/Layout/MainLayout.razor
@@ -32,7 +32,10 @@
    <MudAppBar Elevation="1">
         <MudIconButton id="nav-drawer-toggle-button" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
         <MudText Typo="Typo.h5" Class="ml-3">
-           <img src="images/logonome64.png" height="40"/>
+			<a href="/">
+                <img src="images/logonome64.png" height="40"/>
+                
+            </a>
        </MudText>  
        <MudSpacer />  
        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" Href="/about" />  
