--- a/VeraciApp/Components/Account/Pages/ExternalLogin.razor
+++ b/VeraciApp/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using VeraciApp.Data
+@using VeraciBot.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
