--- a/VeraciApp/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/VeraciApp/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using VeraciApp.Data
+@using VeraciBot.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
