--- a/VeraciApp/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/VeraciApp/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using VeraciApp.Data
+@using VeraciBot.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
