--- a/VeraciApp/Components/Account/Pages/Register.razor
+++ b/VeraciApp/Components/Account/Pages/Register.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using VeraciApp.Data
+@using VeraciBot.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
