--- a/VeraciApp/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/VeraciApp/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using VeraciApp.Data
+@using VeraciBot.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
