Alteração base css

--- a/VeraciApp/wwwroot/base.css
+++ b/VeraciApp/wwwroot/base.css
@@ -1,4 +1,4 @@
-﻿@media handheld {
+﻿@media (max-width: 768px) and (orientation: portrait) {
     .horizontalLayout {
         display: none;
     }
@@ -7,7 +7,7 @@
         display: flex;
     }
 }
-@media screen {
+@media (min-width: 769px), (orientation: landscape) {
     .horizontalLayout {
         display: flex;
     }
